--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,19 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "assemblyai": "^4.9.0",
+    "axios": "^1.8.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
-    "express": "~4.16.1",
+    "dotenv": "^16.4.7",
+    "express": "~4.16.4",
+    "fluent-ffmpeg": "^2.1.3",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.21",
     "microsoft-cognitiveservices-speech-sdk": "^1.23.0",
     "morgan": "~1.9.1",
+    "multer": "1.4.5-lts.2",
     "pug": "2.0.0-beta11"
   }
 }
