--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
+    "elevenlabs": "^1.54.0",
     "express": "~4.16.4",
     "fluent-ffmpeg": "^2.1.3",
+    "groq-sdk": "^0.17.0",
     "http-errors": "~1.6.3",
+    "https-proxy-agent": "^7.0.6",
     "lodash": "^4.17.21",
     "microsoft-cognitiveservices-speech-sdk": "^1.23.0",
     "morgan": "~1.9.1",
