--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "build": "echo 'No build step required for Express server'"
   },
   "dependencies": {
     "assemblyai": "^4.9.0",
@@ -22,6 +24,7 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.23.0",
     "morgan": "~1.9.1",
     "multer": "1.4.5-lts.2",
+    "nodemon": "^3.1.9",
     "pug": "2.0.0-beta11"
   }
 }
