--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "microsoft-cognitiveservices-speech-sdk": "^1.23.0",
     "morgan": "~1.9.1",
+    "nodemon": "^3.1.9",
     "pug": "2.0.0-beta11"
   }
 }
