--- a/talking_avatar/public/manifest.json
+++ b/talking_avatar/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Talking Avatar",
-  "name": "3D Talking Avatar Demo",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,21 +10,16 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
+      "sizes": "192x192"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any maskable"
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
-  "orientation": "portrait",
-  "scope": "/",
-  "prefer_related_applications": false
+  "background_color": "#ffffff"
 }
