--- a/talking_avatar/vercel.json
+++ b/talking_avatar/vercel.json
@@ -5,14 +5,20 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build"
+        "distDir": "build",
+        "installCommand": "npm install"
       }
     }
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/static/(.*)",
-      "headers": { "cache-control": "public,max-age=31536000,immutable" },
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
       "continue": true
     },
     {
@@ -24,8 +30,9 @@
       "dest": "/manifest.json"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "src": "/[^.]+",
+      "dest": "/index.html",
+      "status": 200
     }
   ]
 } 
