--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "assemblyai": "^4.9.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "dotenv": "^16.4.7",
     "elevenlabs": "^1.54.0",
     "express": "~4.16.4",
+    "firebase": "^11.5.0",
     "fluent-ffmpeg": "^2.1.3",
     "groq-sdk": "^0.17.0",
     "http-errors": "~1.6.3",
@@ -25,6 +27,7 @@
     "morgan": "~1.9.1",
     "multer": "1.4.5-lts.2",
     "nodemon": "^3.1.9",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "uuid": "^11.1.0"
   }
 }
