--- a/talking_avatar/package.json
+++ b/talking_avatar/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^11.5.0",
     "lodash": "^4.17.21",
     "microsoft-cognitiveservices-speech-sdk": "^1.23.0",
     "react": "^18.2.0",
     "react-async-hook": "^4.0.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "three": "^0.142.0",
     "web-vitals": "^2.1.4"
