--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.23.0",
     "morgan": "~1.9.1",
     "multer": "1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "pug": "2.0.0-beta11",
+    "twilio": "^5.5.1",
     "uuid": "^11.1.0"
   }
 }
