--- a/talking_avatar/package.json
+++ b/talking_avatar/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-async-hook": "^4.0.0",
     "react-audio-player": "^0.17.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
