add sms reminders for prescriptions

--- a/talking_avatar/public/manifest.json
+++ b/talking_avatar/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Talking Avatar",
-  "name": "3D Talking Avatar Demo",
+  "name": "Karuna",
   "icons": [
     {
       "src": "favicon.ico",
